# labs-decision-support-tool

./: .gitignore  .hadolint.yaml  .template-flask-version  .template-version  .trivyignore  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  init.sql
app/: .app-shell.bashrc  .gitignore  Dockerfile  Makefile  gunicorn.conf.py  local.env  promptfooconfig.ci.yaml  pyproject.toml  refresh-ingestion.sh  scratch-string_utils.py  streaming-test.html  test.csv  threads-2025-03-06-2025-03-07.json  threads-2025-03-06-2025-03-07.pickle
app/.chainlit/: config.toml
app/notebooks/: .gitignore  Embeddings.ipynb  Inline verbatim quoting.ipynb  StreamingComparison.ipynb  SyntheticEval.ipynb  Translation.ipynb  UnstructoredExploration.ipynb  chunking-markdown.ipynb  edd-chunking.ipynb  ingesting-markdown.ipynb  markdown_tree.ipynb  scrapy.ipynb  synthetic_eval_questions.json
app/notebooks/cohere_cache/: cache.db
app/notebooks/edd/: .gitignore  edd-about-sdi.json  edd-about-sdi.md  scrapy.cfg
app/notebooks/metrics/: PrecisionRecall.ipynb  generate_q_a_pairs.py  q_a_generation.ipynb
app/notebooks/modularizing-prompts/: Monolithic.ipynb
app/notebooks/pdfminer-exploration/: bem_extractions.py  pdf_tagextractor.py  pdfminer_extract_json.ipynb
app/notebooks/question_answer_generator/: generate_q_a_pairs.py  q_a_generation.ipynb
app/notebooks/translation/: generated_questions_1000000.json  generated_questions_640.json
app/promptfoo/: generateUniqueId.js  promptfooconfig.ci.yaml  readability_assessment.py
app/public/: custom_script.js
app/src/: __init__.py  app.py  app_config.py  auth.py  backend.py  batch_process.py  cache.py  chainlit.py  chainlit_data.py  chat_api.py  chat_engine.py  citations.py  format.py  generate.py  healthcheck.py  ingest_bem_pdfs.py  ingest_ca_public_charge.py  ingest_edd_web.py  ingest_guru_cards.py  ingest_irs_web.py  ingest_la_county_policy.py  ingest_policy_pdfs.py  ingest_runner.py  ingest_wic.py  ingester.py  login.py  main.py  profiling.py  profiling_stats.py  retrieve.py  shared.py
app/src/db/: bulk_ops.py  manage.py  pg_dump_util.py  pg_util.py
app/src/embeddings/: README.md  __init__.py  cohere.py  mock.py  model.py  mpnet.py  openai.py  sentence_transformer.py
app/src/evaluation/: README.md  __init__.py  data_models.py  literalai_exporter.py
app/src/ingestion/: .gitignore  elements.py  get_grouped_texts.py  ingest_edd_web.py  markdown_chunking.py  markdown_tree.py  markdown_utils.py  pdf_elements.py  pdf_postprocess.py  pdf_stylings.py  scrape_ca_public_charge.py  scrape_edd_web.py  scrape_irs_web.py  scrape_la_policy.py  scrape_wic.py  scrapy.cfg  scrapy_runner.py
app/src/metrics/: README.md  cli.py  tech-spec.md
app/src/qa_generation/: cli.py  config.py  generator.py  progress.py  runner.py  storage.py
app/src/util/: bem_util.py  class_utils.py  embedding_models.py  file_util.py  html.py  ingest_utils.py  literalai_util.py  pdf_tag_extractor.py  pdf_utils.py  sampling.py  string_utils.py  unstructured_utils.py
app/tests/: conftest.py  mock_completion.py
app/tests/docs/: 100.pdf_original
app/tests/lib/: db_testing.py
app/tests/mock/: mock_completion.py  mock_embedding_model.py  mock_ollama.py  mock_sentence_transformer.py  test_mock_sentence_transformer.py
app/tests/src/: test_auth.py  test_backend.py  test_batch_process.py  test_batch_process_performance.py  test_chainlit.py  test_chainlit_data.py  test_chat_api.py  test_chat_engine.py  test_citations.py  test_format.py  test_generate.py  test_healthcheck.py  test_ingest_bem_pdfs.py  test_ingest_ca_public_charge.py  test_ingest_edd_web.py  test_ingest_guru_cards.py  test_ingest_irs_web.py  test_ingest_la_county_policy.py  test_ingest_policy_pdfs.py  test_ingester.py  (+4 more)
(+239 files in other folders)
